prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  annotations:
    cert-manager.io/cluster-issuer: "prod-issuer"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: "https://github.com/Prowlarr/Prowlarr/blob/develop/Logo/128.png"
    forecastle.stakater.com/appName: "prowlarr"
    forecastle.stakater.com/group: "MediaCenter"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prowlarr.geekhomeinside.io
      secretName: prowlarr-ingress-tls
  rules:
    - host: prowlarr.geekhomeinside.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
